2022/03/18記事投稿、投稿日デザインの改良

--- a/diary/2022/03/17/index.mdx
+++ b/diary/2022/03/17/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: "ブログの反省点"
 date: "2022-03-17"
-hero_image:
-hero_image_alt: "image2"
-hero_image_credit_text: "sashimi"
+hero_image: "image1.jpg"
+hero_image_alt: "image1"
+hero_image_credit_text: "funny"
 ---
 
 ざっと記録のため記事投稿します。<br/>
