tag機能の追加

--- a/diary/2021/12/26/index.mdx
+++ b/diary/2021/12/26/index.mdx
@@ -4,10 +4,11 @@ date: "2021-12-27"
 hero_image: "image2.png"
 hero_image_alt: "image2"
 hero_image_credit_text: "sashimi"
+tags: ["日記", "旅行"]
 ---
 
-12月25日の土曜日に静岡に遊びに行ってきました。
-12月25日といえばクリスマスですね！
+12 月 25 日の土曜日に静岡に遊びに行ってきました。
+12 月 25 日といえばクリスマスですね！
 町中にクリスマスムードが漂っていました...
 写真は、静岡で食べたお刺身盛り合わせです。
 やっぱり、静岡の海鮮はとても美味しい。
