--- a/diary/2022/03/17/index.mdx
+++ b/diary/2022/03/17/index.mdx
@@ -4,6 +4,7 @@ date: "2022-03-17"
 hero_image: "image1.jpg"
 hero_image_alt: "image1"
 hero_image_credit_text: "funny"
+tags: ["日記", "反省"]
 ---
 
 ざっと記録のため記事投稿します。<br/>
