--- a/tech/2022/03/18/index.mdx
+++ b/tech/2022/03/18/index.mdx
@@ -3,6 +3,7 @@ title: "Gatsby Cloudのbuild失敗について"
 date: "2022-03-18"
 hero_image: "image1.jpg"
 hero_image_alt: "image"
+tags: ["技術", "Gatsby"]
 ---
 
 世界の皆さんどうもでございます。masayamatu です。
