--- a/tech/2022/03/19/index.mdx
+++ b/tech/2022/03/19/index.mdx
@@ -3,6 +3,7 @@ title: "GatsbyのサイトにReact Iconsを導入する"
 date: "2022-03-19"
 hero_image: "image1.jpg"
 hero_image_alt: "image"
+tags: ["技術", "React"]
 ---
 
 import { FaRegCalendarAlt } from "react-icons/fa";
