--- a/tech/2022/03/27/index.mdx
+++ b/tech/2022/03/27/index.mdx
@@ -3,6 +3,7 @@ title: "VS Code の入力補完の設定を編集する"
 date: "2022-03-27"
 hero_image: "image1.jpg"
 hero_image_alt: "image"
+tags: ["技術", "Visual Studio Code", "開発環境"]
 ---
 
 世界の皆さんどうもでございます。masayamatu です。
