Gatsby JS バージョンアップ対応

--- a/article/2022/11/2/index.mdx
+++ b/article/2022/11/2/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "「これ、動的計画法ぽいな」の言語化"
+title: "これ、動的計画法ぽいなの言語化!"
 date: "2022-11-02"
 hero_image: "image1.jpg"
 hero_image_alt: "image"
@@ -57,7 +57,7 @@ ToDo
 ## 問題例 2
 
 まず、問題例の問題１を見てみましょう。問題文の条件を満たすパスワードが何通りか数える問題です。
-制約が N <=　 10^6 なので O(N)のアルゴリズムで間に合いそうです。
+制約が N `<=`　 10^6 なので O(N)のアルゴリズムで間に合いそうです。
 
 そのため、素直にそれぞれの桁で条件を満たす数字の個数を掛け合わせていけば良いと考えるかもしれません。
 
@@ -86,7 +86,7 @@ ToDo
 さて、動的計画法は、入門競技プログラマが最初に当たる壁だと思います。この壁を乗り越えるためには
 どうすれば良いか。
 
-それは、やはり<strong>練習あるのみ</strong>だと思います。
+それは、やはり練習あるのみだと思います。
 
 以下に練習におすすめの問題集を紹介しておきます。
 これらで練習を重ねていけば、何となく動的計画法ぽいなの感覚を身に付けることができると思いますので
